# MOSADE

./: .gitignore  404.html  LICENSE  README.md  REPRODUCIBILITY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml
api/: index.html
configs/: 01_skeleton_zdt.yaml  05_strategy_contract_smoke.yaml  ablation.yaml  ablation_main_parallel.yaml  benchmark_zdt.yaml  default.yaml  smoke_test.yaml
configs/dev/: 03_credit_representatives.yaml  ablation_smoke.yaml
configs/formal/: a1_epsilon_modes.yaml  a1_epsilon_modes_supplementary_hard_constraints.yaml  a3_memory_ablation.yaml  a4_restart_ablation.yaml  a5_domselect_ablation.yaml  a7_runtime_workers1.yaml  a7_runtime_workers1_no_smsemoa.yaml  a7_runtime_workers6.yaml  a7_runtime_workers6_no_smsemoa.yaml  e3_design_constants.yaml
configs/sensitivity/: sens_lp_20.yaml  sens_lp_50.yaml
docs/: api.md  index.md  usage.md
experiments/configs/: 02_uniform_no_credit.yaml  benchmark_dascmop.yaml  benchmark_realworld_cre_2obj.yaml  benchmark_realworld_cre_3obj.yaml  benchmark_realworld_moon_optional.yaml  benchmark_wfg.yaml  comparison_smoke.yaml  full_benchmark.yaml  pilot.yaml  preflight.yaml
experiments/mosade_experiments/: __init__.py
experiments/scripts/: analyze_sensitivity.py  build_a7_runtime_no_smsemoa_outputs.py  build_archive_manifest.py  build_figures_a1_a7.py  build_statistical_outputs.py  compare_results.py  generate_sensitivity_configs.py  merge_benchmark_results.py  plot_results.py  postprocess_realworld.py  resume_experiment.py  run_sensitivity.py  run_target_sanity_checks.py  statistical_analysis.py  validate_dascmop.py
figures/: figure_source_manifest.csv
scripts/: analyze_sensitivity.py  build_e3_clean_stats.py  merge_benchmark_results.py  plot_mosade_history.py  plot_results.py  resume_experiment.py  run_experiment.py  run_sensitivity.py  run_target_sanity_checks.py  validate_dascmop.py  validate_pilot.py  validate_preflight.py
search/: search_index.json
src/mosade/: __init__.py
tables/: a1_a5_clean_effect_sizes.csv  a1_consolidated_effect_sizes_clean.csv  a1_epsilon_modes_effect_sizes_clean.csv  a1_epsilon_modes_metrics.csv  a1_epsilon_modes_pairwise_stats_clean.csv  a1_supplementary_by_run_clean.csv  a1_supplementary_pairwise_stats_clean.csv  a3_memory_ablation_metrics.csv  a3_memory_ablation_pairwise_stats.csv  a3_memory_ablation_pairwise_stats_clean.csv  a4_restart_ablation_effect_sizes.csv  a4_restart_ablation_metrics.csv  a4_restart_ablation_pairwise_stats_clean.csv  a5_domselect_ablation_by_run_clean.csv  a5_domselect_ablation_effect_sizes.csv  a5_domselect_ablation_effect_sizes_clean.csv  a5_domselect_ablation_summary.csv  a6_dtlz2_ablation_crosscheck.csv  a7_runtime_by_run.csv  a7_runtime_speedup_workers6_vs_workers1.csv  bootstrap_ci_ablation.csv  bootstrap_ci_cre.csv  bootstrap_ci_hv_igd_main.csv  e3_design_constants_effect_sizes_clean.csv  e3_design_constants_pairwise_stats.csv  e3_design_constants_pairwise_stats_clean.csv  e3_design_constants_sensitivity_index_clean.csv  e3_statistical_test_manifest_clean.csv  rebuilt_ablation_stats.csv  rebuilt_cre_by_run.csv  rebuilt_cre_rankings.csv  rebuilt_cre_stats.csv  rebuilt_cre_summary.csv  rebuilt_main_benchmark_stats.csv  rebuilt_tables_source_trace.csv  runtime_workers_1_no_smsemoa.csv  runtime_workers_6_no_smsemoa.csv  statistical_test_manifest.csv
tests/: test_algorithm_regressions.py  test_dascmop.py  test_decomposition.py  test_dtlz7.py  test_epsilon_modes.py  test_merge_results.py  test_metrics.py  test_mosade_telemetry_smoke.py  test_problems.py  test_pymoo_wrapper.py  test_realworld_cre_shapes.py  test_realworld_cre_smoke.py  test_reference_point_and_metrics.py  test_registry_presets.py  test_selection_modes.py  test_smoke.py  test_unsupported_handling.py  test_wfg.py
usage/: index.html
(+89 files in other folders)
