[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mosade"
version = "0.1.0"
description = "MOSADE: Multi-Objective Self-Adaptive Differential Evolution"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
analysis = [
    "matplotlib>=3.9",  # Axes.boxplot(tick_labels=) and Colormap.with_extremes()
    "scipy>=1.10",
    "pandas>=2.0",
]

# Only the shippable `mosade` library under src/ is packaged into the wheel.
# The thesis tooling in experiments/ (the `mosade_experiments` package) is
# deliberately excluded from the distribution.
[tool.setuptools.packages.find]
where = ["src"]
include = ["mosade*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# experiments/ is on the import path so the top-level suite (which keeps
# test_epsilon_modes.py) and `pytest experiments/tests/` can import the
# mosade_experiments tooling, even though it is never installed into the wheel.
pythonpath = ["src", "experiments"]

[tool.coverage.run]
source = ["src/mosade"]

[tool.ruff]
line-length = 100
target-version = "py310"
